the content is displaying on the main page

--- a/Poo_Virmani_MyFavouriteWebSeries/src/app/content-card/content-card.component.html
+++ b/Poo_Virmani_MyFavouriteWebSeries/src/app/content-card/content-card.component.html
@@ -1,8 +1,8 @@
-<div>
+<!-- <div>
     <div>
         @for(Content of contentList.Content; track Content.id; let i = $index){
             <div [innerHTML]="contentList.outputAtIndex(i)">
             </div>
         }
     </div>
-  </div>
+  </div> -->
