--- a/Poo_Virmani_MyFavouriteWebSeries/src/app/content-card/content-card.component.html
+++ b/Poo_Virmani_MyFavouriteWebSeries/src/app/content-card/content-card.component.html
@@ -1,8 +1,16 @@
-<!-- <div>
-    <div>
-        @for(Content of contentList.Content; track Content.id; let i = $index){
-            <div [innerHTML]="contentList.outputAtIndex(i)">
-            </div>
-        }
-    </div>
-  </div> -->
+<div class="content-card" [ngClass]="{
+    'fashion': contentItem.type === 'Fashion',
+    'mansion': contentItem.type === 'Mansion',
+    'food': contentItem.type === 'Food',
+    'unspecified': !contentItem.type
+  }">
+
+      <img [src]="contentItem.imgURL" *ngIf="contentItem.imgURL" alt="{{ contentItem.title }}" class="content-card-image" height="200px" width="150px">
+      <div *ngIf="contentItem.imgURL">
+          <h2>{{ contentItem.title }}</h2>
+          <p><strong>Description:</strong> {{ contentItem.description }}</p>
+          <p><strong>Creator:</strong> {{ contentItem.creator }}</p>
+          <p *ngIf="contentItem.type"><strong>Type: </strong>{{ contentItem.type }}</p>
+          <p *ngIf="contentItem.tags && contentItem.tags.length > 0"><strong>Tags:</strong> {{ contentItem.tags.join(', ') }}</p>
+      </div>
+  </div>
