--- a/Poo_Virmani_MyFavouriteWebSeries/src/app/content-list/content-list.component.html
+++ b/Poo_Virmani_MyFavouriteWebSeries/src/app/content-list/content-list.component.html
@@ -4,8 +4,8 @@
 <!-- Display search result message -->
 <p [ngStyle]="{'color': contentExists ? 'green' : 'red'}">{{ message }}</p>
 
-<h1>Empty</h1>
-<app-content-card *ngFor="let contentItem of Items | search: ' '" [contentItem]="contentItem"></app-content-card>
+<!-- <h1>Empty</h1>
+<app-content-card *ngFor="let contentItem of Items | search: ' '" [contentItem]="contentItem"></app-content-card> -->
 
 <h2>Comedy</h2>
 <app-content-card *ngFor="let contentItem of Items | search: 'Comedy'" [contentItem]="contentItem"></app-content-card>
