--- a/Poo_Virmani_MyFavouriteWebSeries/src/app/app.component.html
+++ b/Poo_Virmani_MyFavouriteWebSeries/src/app/app.component.html
@@ -227,7 +227,8 @@
       </svg>
       <h1>Hello, {{ title }}</h1>
       <p>Congratulations! Your app is running. 🎉</p>
-      <app-content-list [Items]="Items"></app-content-list>
+      <app-message></app-message>
+      <app-content-list></app-content-list>
     </div>
     <div class="divider" role="separator" aria-label="Divider"></div>
     <div class="right-side">
