--- a/Poo_Virmani_MyFavouriteWebSeries/src/app/content-list/content-list.component.html
+++ b/Poo_Virmani_MyFavouriteWebSeries/src/app/content-list/content-list.component.html
@@ -4,6 +4,11 @@
 <!-- Display search result message -->
 <p [ngStyle]="{'color': contentExists ? 'green' : 'red'}">{{ message }}</p>
 
+
+<h1>
+    Single ID content
+</h1>
+<app-content-card [contentItem]="contentItem"></app-content-card>
 <!-- <h1>Empty</h1>
 <app-content-card *ngFor="let contentItem of Items | search: ' '" [contentItem]="contentItem"></app-content-card> -->
 
